Prevent image overflow on very, very narrow screens

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ header aside {
 header .logo {
   align-self: center;
   max-height: 12rem;
+  max-width: 100%;
+  object-fit: contain;
   margin: 1em;
 }
 
